k8s/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-3-tier
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: frontend-3-tier
  template:
    metadata:
      labels:
        app: frontend-3-tier
    spec:
      containers:
      - name: frontend
        image: thecyberbaby/frontend:20
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
