k8s/deployment_mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      role: database
  template:
    metadata:
      labels:
        role: database
    spec:
      containers:
      - name: mongo-container
        image: mongo:4.4
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db  # MongoDB's default data directory
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc  # Reference to the PVC created
