k8s/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    role: api  # Ensure this matches the labels in your backend pod
  ports:
    - name: http
      port: 3500  # This should match your backend container port
      targetPort: 3500  # Ensure the targetPort is also set to 3500
