k8s/service_mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  selector:
    role: database
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
